            Effected files:
            * res/templates/default.tmpl
            * static/setup.txt

  * #45775: FORK from wt_cart to caddy
            * marker are moved
              * ###MY_CART_PAGE_URL### -> ###MY_CADDYURL###
              * my_cart_quantity (removed)
              Effected files:
              * res/templates/default.tmpl
              * static/setup.txt
            Effected files in priciple
            * lib
              * icons/die-netzmacher-logo-quadrat.png   ( new )
              * userfunc/*                              ( new )
            * static
              * constants.txt
              * setup.txt
                * $myConst.pages.quick_shop.cart      -> $quick_shop.caddyUidCart
                * $myConst.pages.quick_shop.shipping  -> $quick_shop.caddyUidShipping 
  Improvement
  * #46381: See #46379
  * #46379: Clean up TypoScript files
            Effected files:
            * static/quick_shop   (removed)
            * ext_tables.php
  * #46378: Clean up *.tmpl files
            * res/v1.4 -> res/templates
            Effected files:
            * static/quick_shop/setup.txt
            * res
              * templates
                * default_select_30.tmpl  (removed)
              * default.css               (removed)
              * default.tmpl              (removed)
              * tmpl_fieldwrap.html       (removed)
  * #i0001: Key for page tree icon moved from quick_shop to quickshop

2.2.3
  12-09-20
  New Feature
  * #00000: RealUrl configuration file
            Effected file
            * res/samples/realurl/realurl_conf.php

2.2.2
  12-06-13
  Update TYPO3 4.7
  * #00000: $ICON_TYPES -> t3lib_SpriteManager::addTcaTypeIcon
  12-05-14
  Update
  * #00000: Update to Browser version 3.9.14
            filter.table.field.first_item.value_stdWrap is moved to cObject
            Effected files:
            * static/setup.txt

2.2.1
  12-04-06
  Improvements
  * #00000: Update for wt_cart_orderpdf 0.0.9