@@ -142,7 +142,7 @@ VERSION 3.7.0
           ###TX_QUICKSHOP_PRODUCTS.DESCRIPTION###
           <div style="clear:both"></div>
           <!-- ###SINGLEBODYROW### end --><!-- ###SINGLEBODY### end -->
-          <form name="form_add_to_cart" id="form-order" action="###MY_CADDYURL###" method="post">
+          <form class="caddy" name="caddy" action="###MY_CADDYURL###" method="post">
             <fieldset id="add-to-cart">
               <input type="hidden" name="tx_quickshop_products[sku]" value="###TX_QUICKSHOP_PRODUCTS.SKU###" />
               <input type="hidden" name="tx_browser_pi1[showUid]" value="###SHOWUID###" />
